[project]
name = "renters-merida"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.5",
    "fastapi>=0.128.0",
    "pyjwt>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]


[project.scripts]
app = "src.app.main:app"
